--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "jest"
+    "test": "jest --detectOpenHandles --watch"
   },
   "keywords": [],
   "author": "Nafiz Anam",
@@ -29,6 +29,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/multer": "^1.4.11",
     "jest": "^29.7.0",
+    "mongodb-memory-server": "^9.1.7",
     "nodemon": "^2.0.22",
     "supertest": "^6.3.4"
   }
