--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "jest --detectOpenHandles --watch"
+    "test": "jest --detectOpenHandles --verbose"
   },
   "keywords": [],
   "author": "Nafiz Anam",
